<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="4dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72">

        <EditText
            android:id="@+id/resultView"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/resultDisplay"
            android:textAlignment="viewEnd"
            android:textSize="48sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnClear"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnClear"
                    android:text="@string/clear"
                    android:textSize="30sp" />

                <ImageButton
                    android:id="@+id/btnBackspace"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/backspace"

                    android:onClick="btnBackspace"
                    android:text="@string/backspace"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btnBrackets"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnBracket"
                    android:text="@string/brackets"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnDivide"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnDivide"
                    android:text="@string/division"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSeven"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnSeven"
                    android:text="@string/seven"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnEight"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnEight"
                    android:text="@string/eight"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnNine"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnNine"
                    android:text="@string/nine"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnTimes"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button2"
                    android:onClick="btnTimes"
                    android:text="@string/multiplication"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnFour"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnFour"
                    android:text="@string/four"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnFive"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnFive"
                    android:text="@string/five"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnSix"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnSix"
                    android:text="@string/six"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnMinus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button2"
                    android:onClick="btnMinus"
                    android:text="@string/minus"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnOne"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnOne"
                    android:text="@string/one"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnTwo"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnTwo"
                    android:text="@string/two"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnThree"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnThree"
                    android:text="@string/three"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnPlus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button2"
                    android:onClick="btnPlus"
                    android:text="@string/plus"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnZero"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="2"
                    android:background="@drawable/button1"
                    android:onClick="btnZero"
                    android:text="@string/zero"
                    android:textSize="30sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/btnDot"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button1"
                    android:onClick="btnComma"
                    android:text="@string/comma"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnEquals"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button2"
                    android:onClick="btnEquals"
                    android:text="@string/equal"
                    android:textSize="30sp"
                    app:rippleColor="@android:color/holo_green_light" />
            </TableRow>

        </TableLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>